--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_exa20201?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://logiapp.ctoa2o52rpry.us-east-1.rds.amazonaws.com:3306/logiapp?serverTimezone=UTC
+spring.datasource.username=logiapp_admin
+spring.datasource.password=logi4pp123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 spring.jpa.hibernate.ddl-auto=update
 
